fixes alignments of charts and inputs

--- a/web/css/d3-tip.css
+++ b/web/css/d3-tip.css
@@ -52,20 +52,3 @@
   top: 50%;
   left: 100%;
 }
-
-h2 {
-    color:white;
-    text-align:center;
-}
-
-#gen-model {
-    background:rgb(194,118,25);
-}
-
-#analysis-infer {
-    background:rgb(84,137,160);
-}
-
-#observed {
-    background:rgb(193,44,51);
-}
